
syntax = "proto3";

package proto;


message PBStringList{
	repeated string list = 1;
}

message PBInt32{
	int32 value = 1;
}

message PBString{
	string value = 1;
}