syntax = "proto3";

import "hero.proto";

package proto;

message PBLoginReq
{
	int32 user_id = 1;
	string token = 2;
}

message PBCreateRoleReq
{
	int32 gender = 1;
	string name = 2;
}


message PBLoginSucc
{
	int32 user_id = 1;
	int64 player_id = 2;
	string name = 3;
	int32 tili = 4;
	int32 jingli = 5;
	int64 battle_score= 6;
	map<int32, int64> res_map = 7;
	repeated PBHeroEntity hero_list = 8;
}